# aBrowser

./: CMakeLists.txt  README.md  main.cpp
api/: api.cpp  api.h
browser/: browser.cpp  browser.h  js_injector.cpp  js_injector.h  res_handler.cpp  res_handler.h
settings/: settings.cpp  settings.h
ui/: main_window.cpp  main_window.h
